--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -11,8 +11,76 @@ body {
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 15px;
+  font-size: 14px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #274167;
+  background-color: #F4F6FC;
+}
+
+button {
+  padding: 8px 16px;
+  margin-top: 16px;
+  background-color: #072AC8;
+  border: none;
+  border-radius: 4px;
+  color: #FFFFFF;
+  font-weight: 600;
+  transition: 0.2s;
+}
+
+button:hover {
+  background-color: #062099;
+}
+
+button.btn-secondary {
+  background-color: #F4F6FC;
+  color: #072AC8;
+}
+
+button.btn-secondary:hover {
+  background-color: #FFFFFF;
+}
+
+a {
+  color: #072AC8;
+  font-weight: 500;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+a:hover {
+  text-decoration: underline;
+  text-decoration-color: #072AC8;
+  text-underline-offset: 4px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin: 24px auto;
+}
+
+form div {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  font-size: 12px;
+  margin-bottom: 2px;
+  font-weight: 500;
+}
+
+input {
+  padding: 8px 8px;
+  border: none;
+  border-radius: 4px;
+  color: #274167;
+}
+
+input::placeholder{
+  color: #8a96b6;
 }
